--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Mundo Invertido | Semana Front-end</title>
+    <title>Mundo Invertido</title>
 
     <link rel="stylesheet" href="assets/css/styles.css" />
   </head>
@@ -127,14 +127,17 @@
     <footer>
       <p>
         Projeto construído para fins didáticos, com o objetivo de colocar em
-        prática os conhecimentos de HTML, CSS e JavaScript aprendidos na DIO._
+        prática os conhecimentos de HTML, CSS e JavaScript aprendidos na DIO. 
       </p>
       <img src="assets/images/footer/logo.svg" alt="">
     </footer>
     
     <script type="module" src="assets/js/main.js"></script>
     <script>
-      
+      function switchTheme(){
+        document.body.classList.toggle('dark-theme');
+        document.body.classList.toggle('light-theme');
+      }
     </script>
   </body>
 </html>
